wip: personal info page design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <div class="button-stamp-wrapper">
         <div class="button container">
-            <a class="nextPageBtn" href="#">
+            <a class="nextPageBtn" href="./personal-info.html">
                 რეზიუმეს დამატება
             </a>
         </div>
