feat: personal info page form design

--- a/personal-info.html
+++ b/personal-info.html
@@ -41,19 +41,32 @@
                     ატვირთვა
                     <input type="file" id="imageInput" class="imageInput">
                 </label>
-
             </div>
             <div class="about">
                 <label>ჩემ შესახებ(არასავალდებულო)</label>
-                <input type="text" id="aboutInput" class="aboutInput">
+                <input type="text" id="aboutInput" class="aboutInput" placeholder="ზოგადი ინფო შენ შესახებ">
             </div>
+        </div>
+        <div class="email-number-wrapper">
+            <div class="email">
+                <label>ელ.ფოსტა</label>
+                <input type="text" id="emailInput" class="emailInput" placeholder="anzor666@redberry.ge">
+                <div class="error">უნდა მთავრდებოდეს @redberry.ge-თი</div>
+            </div>
+            <div class="phone">
+                <label>მობილურის ნომერი</label>
+                <input type="text" id="phoneNumInput" class="phoneNumInput" placeholder="+995 12 34 56">
+                <div class="error">უნდა აკმაყოფილებდეს ქართული მობილურის ნომრის ფორმატს</div>
+            </div>
+        </div>
+        <div class="nextPageButton-container">
+            <button type="button" class="nextPageButton">შემდეგი</button>
         </div>
     </div>
     <div class="cv">
         <div class="greetings">
-            <h1>Info</h1>
-            <h1>Goes</h1>
-            <h1>Here</h1>
+            <h1>Form info goes here</h1>
+
         </div>
     </div>
 </body>
