fix: resolve text font issues in certain areas

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     </header>
     <div class="button-stamp-wrapper">
         <div class="button container">
-            <a class="nextPageBtn" href="./personal-info.html">
-                რეზიუმეს დამატება
+            <a class="nextPageBtn" id="nextPageBtn" href="./personal-info.html">
             </a>
         </div>
         <div class="stamp container">
