design: minor changes to match Figma designs

--- a/personal-info.html
+++ b/personal-info.html
@@ -19,7 +19,7 @@
             <div>
                 <header>
                     <div class="header-info-container">
-                        <h1>პირადი ინფო</h1>
+                        <h1 id="personalInfoHeader"></h1>
                         <p>1/3</p>
                     </div>
                 </header>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="nextPageButton-container">
-            <button type="button" class="nextPageButton">შემდეგი</button>
+            <button type="button" class="nextPageButton" id="nextPageButton"></button>
         </div>
     </div>
     <div class="form-info-display">
