wip:experience form validations

--- a/experience-info.html
+++ b/experience-info.html
@@ -46,13 +46,13 @@
         <div class="dates-wrapper">
             <div class="startDate input-control">
                 <label id="startDateLabel">დაწყების რიცხვი</label>
-                <input type="date" id="startDateInput" class="startDateInput">
+                <input type="date" id="startDateInput" class="startDateInput dateInputLogo">
                 <div class="error"></div>
             </div>
             <img id="startDateErrorImg">
             <div class="endDate input-control">
                 <label id="endDateLabel">დამთავრების რიცხვი</label>
-                <input type="date" id="endDateInput" class="endDateInput">
+                <input type="date" id="endDateInput" class="endDateInput dateInputLogo">
                 <div class="error"></div>
             </div>
             <img id="endDateErrorImg">
@@ -108,6 +108,13 @@
         </div>
         <div class="separator-line-wrapper">
             <div class="infoDisplaySeparator"></div>
+        </div>
+        <div class="experienceInfoForm" id="experienceInFoForm">
+            <h1 class="experienceInfoHeader">გამოცდილება</h1>
+            <div class="positionEmployeeForm">
+                <p id="formPosition"></p>
+                <p id="formEmployer"></p>
+            </div>
         </div>
         <div class="footer">
             <img src="./assets/icons/sparkle.svg" alt="sparkle">
