--- a/personal-info.html
+++ b/personal-info.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="aboutMe">
-                    <h2 id="aboutMeLabel"></h2>
+                    <h2 id="aboutMeFormLabel"></h2>
                     <p id="formAbout"></p>
                 </div>
             </div>
