wip: generate new experience form

--- a/experience-info.html
+++ b/experience-info.html
@@ -70,19 +70,19 @@
             <div class="line"></div>
         </div>
         <div id="container">
-
+            <!-- cloned forms go here -->
         </div>
         <!-- New Form -->
         <template id="newFormTemplate" class="newFormContainer">
             <div class="position-employer-wrapper">
                 <div class="position-container">
                     <div class="position input-control">
-                        <label id="positionLabel">თანამდებობა</label>
-                        <input type="text" id="positionInput" class="positionInput"
+                        <label id="positionLabel_ID_PLACEHOLDER">თანამდებობა</label>
+                        <input type="text" id="positionInput_ID_PLACEHOLDER" class="positionInput"
                             placeholder="დეველოპერი, დიზაინერი, ა.შ">
                         <div class="error">მინიმუმ 2 სიმბოლო</div>
                     </div>
-                    <img id="positionErrorImg">
+                    <img id="positionErrorImg_ID_PLACEHOLDER">
                 </div>
                 <div class="employer-container">
                     <div class="employer input-control">
@@ -166,16 +166,16 @@
         <div class="experienceInfoForm" id="experienceInfoForm">
             <h2 class="experienceInfoHeader" id="experienceFormInfoHeader"></h2>
             <div class="positionEmployeeForm">
-                <p id="formPosition"></p>
-                <p id="formEmployer"></p>
+                <p id="formPosition" class="formPosition"></p>
+                <p id="formEmployer" class="formEmployer"></p>
             </div>
             <div class="startEndDateForm">
-                <p id="formStartDate"></p>
-                <p id="dash"></p>
-                <p id="formEndDate"></p>
+                <p id="formStartDate" class="formStartDate"></p>
+                <p id="dash" class="dash"></p>
+                <p id="formEndDate" class="formEndDate"></p>
             </div>
             <div class="formDescription">
-                <p id="formDescription"></p>
+                <p id="formDescription" class="formDescription"></p>
             </div>
         </div>
         <div class="footer">
