fix: about me form header design issue

--- a/education-info.html
+++ b/education-info.html
@@ -36,7 +36,7 @@
             <div class="qualification input-control">
                 <label id="qualificationLabel">ხარისხი</label>
                 <select name="qualification" id="qualification" class="qualificationSelect">
-                    <option value="0" class="disabledIcon" disabled selected hidden>აირჩიეთ ხარისხი</option>
+                    <option value="" class="disabledIcon" disabled selected hidden>აირჩიეთ ხარისხი</option>
                 </select>
                 <div class="error"></div>
             </div>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="aboutMe">
-                    <h2 id="aboutMeLabel"></h2>
+                    <h2 id="aboutMeFormLabel"></h2>
                     <p id="formAbout"></p>
                 </div>
             </div>
@@ -122,6 +122,16 @@
             </div>
             <div class="formDescription">
                 <p id="formDescription" class="formDescription"></p>
+            </div>
+        </div>
+        <div class="separator-line-wrapper">
+            <div class="infoDisplaySeparator"></div>
+        </div>
+        <div class="educationInfoForm" id="educationInfoForm">
+            <h2 class="educationInfoHeader" id="educationFormInfoHeader"></h2>
+            <div class="educationQualificationForm">
+                <p id="formEducation" class="formEducation"></p>
+                <p id="formQualification" class="formQualification"></p>
             </div>
         </div>
         <div class="footer">
