--- a/experience-info.html
+++ b/experience-info.html
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="aboutMe">
-                    <h2 id="aboutMeLabel"></h2>
+                    <h2 id="aboutMeFormLabel"></h2>
                     <p id="formAbout"></p>
                 </div>
             </div>
