wip: sending form date to server

--- a/education-info.html
+++ b/education-info.html
@@ -133,6 +133,12 @@
                 <p id="formEducation" class="formEducation"></p>
                 <p id="formQualification" class="formQualification"></p>
             </div>
+            <div class="educationEndDate">
+                <p class="formEducationEndDate" id="formEducationEndDate"></p>
+            </div>
+            <div class="educationDescription">
+                <p class="formEducationDescription" id="formEducationDescription"></p>
+            </div>
         </div>
         <div class="footer">
             <img src="./assets/icons/sparkle.svg" alt="sparkle">
