wip: experience forms

--- a/cv-page.html
+++ b/cv-page.html
@@ -41,6 +41,10 @@
                     <div class="image-wrapper">
                         <img alt="personal-image" id="personalImg" class="personalImg">
                     </div>
+
+                </div>
+                <div class="separator-line-wrapper">
+                    <div class="infoDisplaySeparator"></div>
                 </div>
             </div>
         </div>
