fix: minor design bugs

--- a/cv-page.html
+++ b/cv-page.html
@@ -13,7 +13,10 @@
 <body>
     <div class="wrapper">
         <div class="header-backBtn-wrapper">
-            <a class="backBtn" href="./index.html"><img src="./assets/icons/backToFirstPageArr.svg" alt="go back"></a>
+            <div class="circle">
+                <a class="backBtn" href="./index.html"><img src="./assets/icons/backToFirstPageArr.svg"
+                        alt="go back"></a>
+            </div>
         </div>
         <div class="form-wrapper">
             <div class="form">
@@ -57,15 +60,16 @@
                 <div class="infoDisplaySeparator"></div>
             </div>
             <div id="displayEducations">
-                <!-- educations go here -->
                 <div class="educationInfoForm" id="educationInfoFormCV">
                     <h2 class="educationInfoHeaderCV" id="educationFormInfoHeaderCV"></h2>
+                    <!-- educations go here -->
 
                 </div>
             </div>
             <div class="footer">
                 <img src="./assets/icons/sparkle.svg" alt="sparkle">
             </div>
+
         </div>
         <div class="popup-wrapper" id="popup">
             <div class="popup-content">
