--- a/education-info.html
+++ b/education-info.html
@@ -18,7 +18,10 @@
 <body>
     <div class="form">
         <div class="header-backBtn-wrapper">
-            <a class="backBtn" href="./index.html"><img src="./assets/icons/backToFirstPageArr.svg" alt="go back"></a>
+            <div class="backBtn-wrapper">
+                <a class="backBtn" href="./index.html"><img src="./assets/icons/backToFirstPageArr.svg"
+                        alt="go back"></a>
+            </div>
             <div>
                 <header>
                     <div class="header-info-container">
@@ -233,7 +236,7 @@
 
 
         <div class="generateExperienceForm-wrapper">
-            <button class="generateNewFormBtn" id="generateNewFormBtn">მეტი გამოცდილების დამატება</button>
+            <button class="generateNewFormBtn" id="generateNewFormBtn">სხვა სასწავლებლის დამატება</button>
         </div>
         <div class="navigation-buttons-wrapper">
             <div class="backBtn">
