--- a/experience-info.html
+++ b/experience-info.html
@@ -17,9 +17,14 @@
 
 <body>
 
+
     <div class="form">
         <div class="header-backBtn-wrapper">
-            <a class="backBtn" href="./index.html"><img src="./assets/icons/backToFirstPageArr.svg" alt="go back"></a>
+            <div class="backBtn-wrapper">
+                <a class="backBtn" href="./index.html"><img src="./assets/icons/backToFirstPageArr.svg"
+                        alt="go back"></a>
+            </div>
+
             <div>
                 <header>
                     <div class="header-info-container">
