--- a/education-info.html
+++ b/education-info.html
@@ -60,7 +60,8 @@
             <div class="description-wrapper">
                 <div class="description input-control">
                     <label id="descriptionLabel">აღწერა</label>
-                    <input type="text" id="descriptionInput" class="descriptionInput" placeholder="განათლების აღწერა">
+                    <textarea type="text" id="descriptionInput" class="descriptionInput"
+                        placeholder="განათლების აღწერა"></textarea>
                     <div class="error"></div>
                 </div>
                 <img id="descriptionErrorImg">
@@ -101,7 +102,8 @@
             <div class="description-wrapper">
                 <div class="description input-control">
                     <label id="descriptionLabel_1">აღწერა</label>
-                    <input type="text" id="descriptionInput_1" class="descriptionInput" placeholder="განათლების აღწერა">
+                    <textarea type="text" id="descriptionInput_1" class="descriptionInput"
+                        placeholder="განათლების აღწერა"></textarea>
                     <div class="error"></div>
                 </div>
                 <img id="descriptionErrorImg_1">
@@ -141,7 +143,8 @@
             <div class="description-wrapper">
                 <div class="description input-control">
                     <label id="descriptionLabel_2">აღწერა</label>
-                    <input type="text" id="descriptionInput_2" class="descriptionInput" placeholder="განათლების აღწერა">
+                    <textarea type="text" id="descriptionInput_2" class="descriptionInput"
+                        placeholder="განათლების აღწერა"></textarea>
                     <div class="error"></div>
                 </div>
                 <img id="descriptionErrorImg_2">
@@ -181,7 +184,8 @@
             <div class="description-wrapper">
                 <div class="description input-control">
                     <label id="descriptionLabel_3">აღწერა</label>
-                    <input type="text" id="descriptionInput_3" class="descriptionInput" placeholder="განათლების აღწერა">
+                    <textarea type="text" id="descriptionInput_3" class="descriptionInput"
+                        placeholder="განათლების აღწერა"></textarea>
                     <div class="error"></div>
                 </div>
                 <img id="descriptionErrorImg_3">
@@ -222,7 +226,8 @@
             <div class="description-wrapper">
                 <div class="description input-control">
                     <label id="descriptionLabel_4">აღწერა</label>
-                    <input type="text" id="descriptionInput_4" class="descriptionInput" placeholder="განათლების აღწერა">
+                    <textarea type="text" id="descriptionInput_4" class="descriptionInput"
+                        placeholder="განათლების აღწერა"></textarea>
                     <div class="error"></div>
                 </div>
                 <img id="descriptionErrorImg_4">
